implements Logout Endpoint
