# public/api/docs/swagger.json
@@ -33,7 +33,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -79,7 +79,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -150,7 +150,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -186,7 +186,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -223,12 +223,12 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized access",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -238,7 +238,38 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/HttpFailureMessage"
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/account/logout": {
+            "get": {
+                "tags": [
+                    "Account"
+                ],
+                "summary": "Attempts to log out an account",
+                "operationId": "1154528e1da5f90aa3b356c63502b533",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/AuthenticationResponse"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized access",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HttpResponseMessage"
                                 }
                             }
                         }
@@ -359,14 +390,14 @@
                 },
                 "type": "object"
             },
-            "HttpFailureMessage": {
+            "HttpResponseMessage": {
                 "properties": {
                     "statusCode": {
                         "description": "The Http Status Code",
                         "type": "integer"
                     },
                     "message": {
-                        "description": "The Failure Message",
+                        "description": "The Message",
                         "type": "string"
                     }
                 },
